--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
         Powered by <a class="link" href="https://jekyllrb.com">Jekyll</a> & <a class="link" href="https://github.com/sergiokopplin/indigo">Indigo</a>
     </p>
 
-    <p class="extra">
+    <!-- <p class="extra">
         <a class="link" href="{{ site.url }}/feed.xml" target="_blank"><svg class="icon icon-rss"><use xlink:href="#icon-rss"></use></svg></a>
-    </p>
+    </p> -->
 </footer>
