--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: page
 ---
 
 {% if page.image and page.headerImage %}
-    <img class="title-image" src="{{ page.image }}" alt="{{ page.title }}">
+    <img class="title-image" src="{{ page.image }}" alt="{{ page.title }}"{% if page.titleImageMaxHeight %} style="max-height: {{ page.titleImageMaxHeight }};"{% endif %}>
 {% endif %}
 
 <h1 class="title">{{ page.title }}</h1>
