--- a/_sass/components/header.sass
+++ b/_sass/components/header.sass
@@ -6,9 +6,12 @@
     z-index: 99
 
     > .link > .selfie
-        width: 175px
+        width: 220px
+        height: 220px
         margin-bottom: 25px
-        border-radius: 100%
+        border-radius: 16px
+        object-fit: cover
+        object-position: center
         transition: all .2s
         box-shadow: 0
         opacity: 1
