--- a/_sass/pages/home-blog-projects.sass
+++ b/_sass/pages/home-blog-projects.sass
@@ -73,26 +73,55 @@
         top: -4px
         margin-right: 10px
 
-.projects > .list > .item > .url
+.projects > .list
     display: flex
-    align-items: center
-    gap: 16px
+    flex-wrap: wrap
+    justify-content: center
+    align-items: stretch
+    gap: 24px
 
-    > .project-image
-        width: 160px
-        height: 160px
-        object-fit: contain
-        flex-shrink: 0
+    > .item
+        flex: 0 0 calc((100% - 48px) / 3)
+        margin: 0
+        display: flex
 
-    > .title
-        display: block
-        width: auto
-        line-height: 1.35
+        > .url
+            width: 100%
+            display: flex
+            flex-direction: column
+            align-items: center
+            justify-content: flex-start
+            gap: 14px
+            padding: 24px 16px
+            text-align: center
+            border: 1px solid $epsilon
+            border-radius: 6px
+
+            > .project-image
+                width: 100%
+                max-width: 160px
+                height: auto
+                max-height: 160px
+                aspect-ratio: 1 / 1
+                object-fit: contain
+                flex-shrink: 0
+
+            > .title
+                display: block
+                width: 100%
+                margin: 0
+                line-height: 1.35
 
 @media #{$mobile}
-    .projects > .list > .item > .url
-        gap: 12px
+    .projects > .list
+        gap: 16px
 
-        > .project-image
-            width: 140px
-            height: 140px
+        > .item
+            flex-basis: calc((100% - 32px) / 3)
+
+            > .url
+                padding: 18px 12px
+
+                > .project-image
+                    max-width: 120px
+                    max-height: 120px
