--- a/_sass/pages/page.sass
+++ b/_sass/pages/page.sass
@@ -10,3 +10,31 @@
         width: 50%
         margin: 0 auto
         display: block
+
+.external-databases
+    margin: 1rem 0 2rem
+    text-align: center
+
+    .external-databases__list
+        display: flex
+        flex-wrap: wrap
+        justify-content: center
+        gap: 1.9rem 3.1rem
+        margin-top: 1rem
+
+    .external-databases__item
+        display: inline-flex
+        flex-direction: column
+        align-items: center
+        text-decoration: none
+
+        img
+            width: 60px
+            height: 60px
+            display: block
+            object-fit: contain
+
+    .external-databases__label
+        margin-top: 0.55rem
+        font-size: 1.02rem
+        line-height: 1.2
